# chatting

./: Cargo.toml  README.md
.cspell/: custom-dictionary.txt
src/: lib.rs  main.rs
src/config/: mod.rs
src/utils/: counter.rs
