[package]
name = "chatting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
flexi_logger = "0.27.4"
futures = "0.3.30"
log = "0.4.20"
rand = "0.8.5"
serde = {version = "1.0.196", features = ["serde_derive", "derive"]}
tokio = {version = "1.36.0", features = ["full"]}
tokio-stream = {version = "0.1.14", features = ["full"]}
tokio-util = {version = "0.7.10", features = ["full"]}

